feat: add angular-cli-ghpages for deployment
style: update title in index.html to "EchoApp Uziel"

build: add Makefile for deployment automation

--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
             ],
             "styles": [
               "src/styles.scss"
-            ]
+            ],
+            "outputPath": "dist/echo-app"
           },
           "configurations": {
             "production": {
@@ -91,8 +92,14 @@
               "src/styles.scss"
             ]
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "b23ae976-4172-47ba-ad34-43e83800341e"
   }
 }
